fix overlap in experience section

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,13 @@ html.dark {
 .borderBlack {
   @apply border border-black/10;
 }
+
+.vertical-timeline-custom .vertical-timeline-element-content {
+  margin-left: -2rem !important;
+  margin-right: -2rem !important;
+}
+
+.vertical-timeline-custom .vertical-timeline-element-date {
+  margin-left: 4rem !important;
+  margin-right: 4rem !important;
+}
